<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    style="@style/Background">

    <FrameLayout
        android:id="@+id/secondBg"
        style="@style/whitebackground">


        <ImageView
            android:id="@+id/star_image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="20dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/vmd_logo"
            app:srcCompat="@drawable/df" />

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="2.5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
             />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:textAllCaps="true"
            app:backgroundTint="@color/pink" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:fontFamily="@font/fira_sans_condensed_medium"
            android:text="@string/don_t_have_an_account_yet"
            android:textAlignment="center"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:text="@string/create_an_account"
            app:backgroundTint="@color/purple" />

    </FrameLayout>


</LinearLayout>
