<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        style="@style/whitebackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/textView9"
            style="@style/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/successful_creation"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/loginpage"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:background="@color/pink"
            android:text="@string/login_page" />

        <ImageView
            android:id="@+id/imageView"
            style="@style/logo"
            android:layout_width="wrap_content"
            android:layout_height="237dp"
            android:contentDescription="@string/logout"
            app:srcCompat="@drawable/df" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>